# pilot3

./: .gitignore  CMakeLists.txt  README.md  cert_gen.sh  esp_project_context.txt  export_content.sh  partitions.csv  sdkconfig  sdkconfig.defaults
bld/ESP_IDF_ESP32_S3-Debug/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt.prev  app-flash_args.in  cmake_install.cmake  config.env  flash_app_args  flash_args  flash_args.in  flasher_args.json  flasher_args.json.in  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  littlefs-flash_args  otadata-flash_args  project_description.json  server.crt.S  server.key.S  web_ui.html.S  x509_crt_bundle.S
bld/ESP_IDF_ESP32_S3-Debug/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
bld/ESP_IDF_ESP32_S3-Debug/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
debugging/: test_ws.py
main/: CMakeLists.txt  Kconfig.projbuild  auth.c  auth.h  cert_mgr.c  cert_mgr.h  config_handler.c  config_handler.h  idf_component.yml  littlefs_mgr.c  littlefs_mgr.h  log_ws.c  log_ws.h  main.c  mdns_mgr.c  mdns_mgr.h  nvs_config.c  nvs_config.h  ota_handler.c  ota_handler.h  static_handler.c  static_handler.h  system_handler.c  system_handler.h  web_server.c  web_server.h  web_ui.html  wifi_manager.c  wifi_manager.h
main/certs/: server.crt  server.key
www/: app.js  index.html  style.css
(+3483 files in other folders)
